--- a/QGReports/QGReport.BlazorApp/QGReport.BlazorApp.csproj
+++ b/QGReports/QGReport.BlazorApp/QGReport.BlazorApp.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="9.0.8" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
   </ItemGroup>
 
   <ItemGroup>
